<resources>
    <string name="app_name">Challenge App</string>
    <string name="element_text">Element</string>
    <string name="repoStarText">Stars: </string>
    <string name="repoForkText">Forks: </string>
    <string name="repoBranchText">Branches: </string>
    <string name="repoNameText">Repository: </string>
    <string name="starImgDiscription">Star icon</string>
    <string name="forkIconDescription">Fork icon</string>
    <string name="branchIconDescription">Branch icon</string>

    <string name="Load_failed">Data loading failed!</string>
    <string name="no_network">Offline mode, please check network connection!</string>
    <string name="retrieve_text">Retrieve</string>
    <string name="search_text">Retrieve</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="github_logo">GitHub Logo</string>
    <string name="no_network_error_image">No network Error Image</string>
    <string name="request_failed">Request not Sucessful</string>
    <string name="app_version">Version 1.0</string>
    <string name="detailsText">Details</string>
    <string name="name_text">Name:</string>
    <string name="full_name_text">Full name:</string>
    <string name="description_text">Description:</string>
    <string name="created_on_text">Created on:</string>
    <string name="watchers_text">Watchers:</string>
    <string name="language_text">Language:</string>
    <string name="forks_text">Forks:</string>
    <string name="star_text">Star:</string>
    <string name="branches_text">Branches:</string>
    <string name="last_update_on_text">Last Update on:</string>
    <string name="owner_text">Owner:</string>
    <string name="branches_icon">Branches icon </string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="watchers_icon">Watchers icon</string>
    <string name="forks_icon">Forks icon</string>
    <string name="star_icon">Star icon</string>
    <string name="search_description">Retrieve repository list</string>
    <string name="github_username">facebook</string>
    <string name="github_username_label">Please enter a GitHub username</string>
    <string name="default_username">facebook</string>
    <string name="switch_text">I want to login and save my retrieved repository list history.</string>
    <string name="history_text">Retrieved repository list history</string>
    <string name="login_title">Login</string>
    <string name="github_login_text">Login with your GitHub account</string>

    <string name="githubClientId">1d41d701007ac3925a6c</string>
    <string name="githubClientSecret">b89e82c79cadc9b4f9922120b4fdaaab639d61a7</string>
    <string name="redirectUrl">challengeapp://callback</string>
    <string name="gitHubOauthUrl">https://github.com/login/oauth/authorize</string>
    <string name="gitHub_api_basic_url">https://api.github.com</string>
    <string name="gitHub_basic_url">https://github.com</string>

</resources>
