<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/repositoryDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayLight"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:paddingBottom="70dp"
        tools:context="com.saber.challengeapp.ui.UserRepoDetailFragment">

        <TextView
            android:id="@+id/detailsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="@string/detailsText"
            android:textColor="@color/colorAccent"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/name_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/detailsTextView"
            app:layout_constraintTop_toBottomOf="@+id/detailsTextView" />

        <TextView
            android:id="@+id/fullNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/full_name_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/nameTV"
            app:layout_constraintTop_toBottomOf="@+id/nameTV" />

        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:lines="4"
            android:maxLines="4"
            android:text="@string/description_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toStartOf="@+id/fullNameTV"
            app:layout_constraintTop_toBottomOf="@+id/fullNameTV" />

        <TextView
            android:id="@+id/createdAtTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/created_on_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/createdAtIcon"
            app:layout_constraintStart_toEndOf="@+id/createdAtIcon"
            app:layout_constraintTop_toTopOf="@+id/createdAtIcon" />

        <TextView
            android:id="@+id/watchersTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/watchers_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/watchersIcon"
            app:layout_constraintStart_toEndOf="@+id/watchersIcon"
            app:layout_constraintTop_toTopOf="@+id/watchersIcon" />

        <TextView
            android:id="@+id/languageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/language_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/descriptionTV"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTV" />

        <TextView
            android:id="@+id/forksTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/forks_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/forksIcon"
            app:layout_constraintStart_toEndOf="@+id/forksIcon"
            app:layout_constraintTop_toTopOf="@+id/forksIcon" />

        <TextView
            android:id="@+id/starsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/star_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/starIcon"
            app:layout_constraintStart_toEndOf="@+id/starIcon"
            app:layout_constraintTop_toTopOf="@+id/starIcon" />

        <ImageView
            android:id="@+id/starIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="@+id/watchersTV"
            app:layout_constraintStart_toStartOf="@+id/ownerTV"
            app:layout_constraintTop_toTopOf="@+id/watchersTV" />

        <ImageView
            android:id="@+id/forksIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/forks_icon"
            android:src="@drawable/forks"
            app:layout_constraintBottom_toBottomOf="@+id/branchesTV"
            app:layout_constraintStart_toStartOf="@+id/starIcon"
            app:layout_constraintTop_toTopOf="@+id/branchesTV" />

        <ImageView
            android:id="@+id/watchersIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/watchers_icon"
            android:src="@drawable/watchers"
            app:layout_constraintStart_toStartOf="@+id/languageTV"
            app:layout_constraintTop_toBottomOf="@+id/languageTV" />

        <ImageView
            android:id="@+id/updatedatIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/calendar_icon"
            android:src="@drawable/calendar"
            app:layout_constraintStart_toStartOf="@+id/createdAtIcon"
            app:layout_constraintTop_toBottomOf="@+id/createdAtIcon" />

        <TextView
            android:id="@+id/updatedAtTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/last_update_on_text"
            app:layout_constraintBottom_toBottomOf="@+id/updatedatIcon"
            app:layout_constraintStart_toEndOf="@+id/updatedatIcon"
            app:layout_constraintTop_toTopOf="@+id/updatedatIcon" />

        <ImageView
            android:id="@+id/createdAtIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/calendar_icon"
            android:src="@drawable/calendar"
            app:layout_constraintStart_toStartOf="@+id/branchesIcon"
            app:layout_constraintTop_toBottomOf="@+id/branchesIcon" />

        <TextView
            android:id="@+id/ownerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:text="@string/owner_text"
            app:layout_constraintBottom_toBottomOf="@+id/languageTV"
            app:layout_constraintStart_toEndOf="@+id/languageTV"
            app:layout_constraintTop_toTopOf="@+id/languageTV" />

        <TextView
            android:id="@+id/branchesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/branches_text"
            app:layout_constraintBottom_toBottomOf="@+id/branchesIcon"
            app:layout_constraintStart_toEndOf="@+id/branchesIcon"
            app:layout_constraintTop_toTopOf="@+id/branchesIcon" />

        <ImageView
            android:id="@+id/branchesIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/branches_icon"
            android:src="@drawable/branches"
            app:layout_constraintStart_toStartOf="@+id/watchersIcon"
            app:layout_constraintTop_toBottomOf="@+id/watchersIcon" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>