<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repositoryDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayLight"
    android:paddingLeft="20dp"
    android:paddingTop="30dp"
    android:paddingRight="20dp"
    android:paddingBottom="70dp"
    tools:context="com.saber.challengeapp.ui.UserRepoDetailFragment">

    <TextView
        android:id="@+id/searchTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/search_description"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/usernameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/github_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/searchTextView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/retrieve_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/retrieve_text"
        android:textColor="@color/colorPrimary"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/usernameET"
        app:layout_constraintTop_toBottomOf="@+id/usernameET" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/github_username_label"
        android:textColor="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@+id/usernameET"
        app:layout_constraintStart_toStartOf="@+id/searchTextView" />

</android.support.constraint.ConstraintLayout>

